# BuddyArm

buddy_arm_bringup/: CMakeLists.txt
buddy_arm_bringup/launch/: hardware.launch.py  simulation.launch.py
buddy_arm_controller/: CMakeLists.txt  buddy_controller.xml  package.xml
buddy_arm_controller/config/: buddy_arm_controllers.yaml
buddy_arm_controller/include/buddy_arm_controller/: buddy_interface.hpp
buddy_arm_controller/launch/: controller.launch.py
buddy_arm_controller/src/: buddy_interface.cpp
buddy_arm_description/: CMakeLists.txt
buddy_arm_description/launch/: display.launch.xml  gazebo.launch.py  sim.launch.xml
buddy_arm_description/urdf/: buddy_core.urdf.xacro  buddy_gazebo.urdf.xacro
buddy_arm_moveit/config/: arm.srdf  joint_limits.yaml  moveit_controllers.yaml
install/: local_setup.sh  setup.sh
log/: latest_build
src/arm_controller/config/: robotarm_controllers.yaml
src/arm_controller/launch/: controller.launch.py
src/arm_controller/src/: arm_interface.cpp
src/buddy_arm_bringup/: package.xml
src/buddy_arm_bringup/launch/: hardware.launch.py  simulation.launch.py
src/buddy_arm_description/: CMakeLists.txt  package.xml
src/buddy_arm_description/launch/: gazebo.launch.py
src/buddy_arm_description/urdf/: buddy_core.urdf.xacro  buddy_gazebo.urdf.xacro  buddy_ros2_control.urdf.xacro  main.urdf.xacro
src/buddy_arm_moveit/: CMakeLists.txt  package.xml
src/buddy_firmware/: CMakeLists.txt  package.xml
src/buddy_functionalities/: CMakeLists.txt  package.xml
src/buddy_functionalities/src/: custom_path.cpp  random_path.cpp
(+142 files in other folders)
